# Juno-Retired

./: .gitignore  .gitmodules  CMakeLists.txt  clean.sh  crossCompile.sh  crossCompileMac.sh  crossCompileWin.sh  demo.cpp  leaks.txt  profile.sh  run.sh  staticCompile.sh  valgrind.sh
include/glad/: glad.h
res/con/: CameraButtons.conf  FreeCamButtons.conf  MenuButtons.conf  PlayerButtons0.conf  PlayerButtons1.conf  PlayerButtons2.conf  PlayerButtons3.conf  gamecontrollerdb.txt
res/mdl/KclTest/: KclTest.dae
res/mdl/Skygarden/: Skygarden.dae
res/pcl/Definitions/: GravityTest.yaml  LameSphere.yaml
res/pcl/SpawnInfo/: GravityTest.yaml  LameSphere.yaml
res/scn/TestMap/: Scenarios.txt  dummy.yaml  kclTest.yaml
res/shd/: defaultFrag.glsl  defaultInstancedVert.glsl  defaultVert.glsl  framebufferFrag.glsl  kclFrag.glsl  kclVert.glsl  lightVert.glsl  particleFrag.glsl  particleVert.glsl
res/tex/Skybox/: Instructions.txt  SkyboxSetup.blend
src/: asystem.h  audio.h  buffers.cpp  buffers.h  camera.cpp  camera.h  frame.cpp  frame.h  fs.h  game.h  gravity.h  gsystem.h  input.h  jsystem.h  kcl.h  ksystem.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  particle.h  psystem.h  rsystem.h  shader.cpp  shader.h  texture.cpp  texture.h  vec2.h  vec3.h  window.cpp  window.h
src/asystem/: aplayer.h  music.cpp  music.h  sound.cpp  sound.h  system.h
src/asystem/raudio/: raudio.c  raudio.h
src/audio/: music.cpp  sound.cpp  system.cpp
src/audio/raudio/: raudio.c  raudio.h
src/cameras/: freeCam.cpp
src/fs/: loader.cpp  loader.h  path.cpp  path.h
src/game/: game.cpp  game.h  modelGroup.cpp  planet.cpp  scenario.cpp  scenario.h  skybox.cpp
src/game/actor/: actor.cpp  actor.h  base.cpp  base.h  spawnInfo.h  spawnTable.cpp  spawnTable.h
src/game/actor/player/: gota.cpp  gota.h  player.cpp  player.h
src/game/cameras/: followCam.cpp  followCam.h  freeCam.cpp  freeCam.h
src/gravity/: cone.cpp  cone.h  cube.cpp  disk.cpp  gravity.cpp  manager.cpp  manager.h  parallel.cpp  point.cpp  point.h  segment.cpp  segment.h  torus.cpp  torus.h  wire.cpp  wire.h
src/gsystem/: game.cpp  game.h  modelGroup.cpp  modelGroup.h  planet.cpp  planet.h  scenario.cpp  scenario.h  skybox.h
src/input/: buttons.h  controller.cpp  controller.h  driver.cpp  driver.h  repeater.cpp  repeater.h
src/input/drivers/: gamepad.cpp  gamepad.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/jsystem/: buffers.cpp  buffers.h  camera.cpp  camera.h  constants.h  frame.cpp  frame.h  framebuffer.cpp  framebuffer.h  glad.c  light.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  rand.cpp  rand.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/jsystem/cameras/: freeCam.h
src/jsystem/vertexModes/: vertex.h  vertexColor.h  vertexColorUV.h  vertexNormal.h  vertexNormalUV.h  vertexUV.h
src/kcl/: body.cpp  body.h  mesh.h  model.cpp  model.h  octree.cpp  octree.h  tree.cpp  util.cpp  util.h
src/ksystem/: mesh.h  model.cpp  model.h  tree.h
src/particle/: effect.h  manager.cpp  manager.h  particle.cpp  particle.h  spawnInfo.cpp  spawnInfo.h  system.cpp  systemGravity.cpp  systemGravity.h  texture.cpp  transition.h
src/particle/effects/: acceleration.cpp  converge.cpp  converge.h  jitter.cpp  jitter.h  limitPlane.cpp  limitPlane.h  radiusConverge.cpp  radiusConverge.h  turn.cpp  turn.h
src/particle/transitions/: scale.h
src/psystem/: glitter.h  manager.cpp  manager.h  particle.cpp  particle.h  spawnInfo.cpp  spawnInfo.h  system.cpp  system.h  systemGravity.cpp  systemGravity.h  texture.cpp  texture.h
src/psystem/effects/: acceleration.cpp  acceleration.h  converge.cpp  jitter.cpp  jitter.h  radiusConverge.cpp
src/psystem/transitions/: alpha.h  color.h  texture.h
src/rsystem/: cone.cpp  cone.h  cube.cpp  cube.h  disk.cpp  disk.h  gravity.cpp  gravity.h  parallel.cpp  parallel.h  point.cpp  point.h  segment.cpp  wire.cpp
src/vertexModes/: vertex.h  vertexColor.h  vertexColorUV.h  vertexNormal.h  vertexNormalUV.h  vertexUV.h
toolchains/: mac.cmake
